filter_macros/tests/try/err/not_struct.stderr
error: Query derive only supports structs
 --> tests/try/err/not_struct.rs:4:10
  |
4 | pub enum E {
  |          ^
