filter_macros/tests/try/err/not_struct.rs
use filter_macros::Query;

#[derive(Query)]
pub enum E {
    A,
}
fn main() {}
